--- a/client/src/diary/diary.css
+++ b/client/src/diary/diary.css
@@ -2,4 +2,5 @@
 
 .content-area {
     background: -moz-linear-gradient(45deg, var(--primary-background-color-dark) 0%, var(--primary-background-color-light) 100%);
+    height: 100vh;
 }
