--- a/client/src/diary/diary.css
+++ b/client/src/diary/diary.css
@@ -1,6 +1,6 @@
 @import url('../styles.css');
 
-.content-area {
+.tab-content-area {
     background: -moz-linear-gradient(45deg, var(--primary-background-color-dark) 0%, var(--primary-background-color-light) 100%);
-    height: 100vh;
+    min-height: 100vh;
 }
